creating index for github pages

--- a/Non-iid-issues-OLS-vs-2SLS.Rmd
+++ b/Non-iid-issues-OLS-vs-2SLS.Rmd
@@ -1,6 +1,10 @@
 ---
-title: "Non-iid Issues: OLS vs 2SLS"
-output: html_notebook
+title: 'Non-iid Issues: OLS vs 2SLS'
+output:
+  html_document:
+    df_print: paged
+knit: (function(input_file, encoding) { out_dir <- 'docs'; rmarkdown::render(input_file,
+  encoding=encoding, output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 ---
 
 ```{r}
